--- a/COMM232A_WebCommunication/index.html
+++ b/COMM232A_WebCommunication/index.html
@@ -44,10 +44,16 @@ a {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #464646;
     display: flex;
-    align-items: center;
     justify-content: center;
+}
+
+.heading-text {
+  padding: 20px;
+  color: #FFF;
+  text-align: center;
+  position: relative;
+  top: 15%;
 }
 
 blockquote {
