Added more information in bio and increased title font size

--- a/COMM232A_WebCommunication/index.html
+++ b/COMM232A_WebCommunication/index.html
@@ -13,7 +13,7 @@ body {
     padding: 0;
     padding-top: 10px;
     text-align: center;
-    background-color: rgb(10,10,10);
+    background-color: rgb(15,15,15);
     color: rgb(255,255,255);
     font-family: 'Montserrat', sans-serif;
     font-weight:300;
@@ -30,6 +30,7 @@ h1 {
     color: rgb(255,255,255);
     font-family: 'Montserrat', sans-serif;
     font-weight:100;
+    font-size:40px
 }
 
 a {
@@ -81,7 +82,10 @@ blockquote {
         can impact decision making and improve peoples lives.
         I aspire to analyze, visualize, and explore data to discover valuable
         insights and to share these insights to the world via interactive web
-        applications. My favorite quote drives this desire to deliver these apps to the world:
+        applications. I believe that everybody can become a data scientist with the right tools.
+        My goal is to enable people with these tools so that they can learn to scrape knowledge
+        out of their own data, wihtout having to give their data to a 3rd party to do the work for them.
+        My favorite quote drives this desire to deliver these apps to the world:
         <p>
             <blockquote>
                 "An investment in knowledge pays the best interest." <br>
