Centered nav. Added content, calendar.

--- a/COMM232A_WebCommunication/HoughtonEsports/index.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/index.html
@@ -8,29 +8,45 @@
 <body>
 
 <div class="title">
-    <h1> Title </h1>
+    <h1> Houghton Esports </h1>
 </div>
 
-<div class="gameBanner">
+<nav class="gameBanner">
     <ul>
         <li><a href="" id="overwatch">Overwatch</a></li>
         <li><a href="" id="lol">League of Legends</a></li>
         <li><a href="" id="dota">Dota 2</a></li>
         <li><a href="" id="rl">Rocket League</a></li>
     </ul>
-</div>
+</nav>
 
 <div class="carousel">
 
 </div>
 
 <div class="content">
+    <h2> What is esports?</h2>
+    <p> Esports is ... </p>
 
+    <h2> About Esports at Houghton </h2>
+    <p> Espors at Houghton is great... </p>
+
+    <h2> Interested? Sign up! </h2>
+    <p> You can sign up by ... </p>
 </div>
 
 <div class="sideBar">
 
 </div>
+
+<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;
+wkst=1&amp;bgcolor=%23FFFFFF&amp;src=houghton.edu_uf7s0s2kr1usepnpo5mook
+40jg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"
+style="border-width:0;" width="400" height="400" frameborder="0" scrolling="no"></iframe>
+
+<footer>
+    <p> Footer. Discord link image. Copyrightstuff. </p>
+</footer>
 
 </body>
 </html>
