Added game logos, started game page layout

--- a/COMM232A_WebCommunication/HoughtonEsports/game_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/game_page.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="title">
-    <h1> Houghton Esports </h1>
+    <h1> Game </h1>
 </div>
 
 <nav class="gameBanner">
@@ -20,23 +20,18 @@
     </ul>
 </nav>
 
-<div class="carousel">
-
-</div>
-
 <div class="content">
-    <h2> What is esports?</h2>
+    <h2> What is (game))</h2>
     <p> Esports is ... </p>
+    <img>
 
-    <h2> About Esports at Houghton </h2>
+    <h2> Tournament Format </h2>
     <p> Espors at Houghton is great... </p>
+    <img>
 
-    <h2> Interested? Sign up! </h2>
+    <h2> Player of the Month </h2>
     <p> You can sign up by ... </p>
-</div>
-
-<div class="sideBar">
-
+    <img>
 </div>
 
 <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;
