removed calendar. Better spacing. Better footer.

--- a/COMM232A_WebCommunication/HoughtonEsports/index.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/index.html
@@ -39,13 +39,15 @@
 
 </div>
 
-<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;
+<!-- <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;
 wkst=1&amp;bgcolor=%23FFFFFF&amp;src=houghton.edu_uf7s0s2kr1usepnpo5mook
 40jg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"
-style="border-width:0;" width="400" height="400" frameborder="0" scrolling="no"></iframe>
+style="border-width:0;" width="400" height="400" frameborder="0" scrolling="no"></iframe> -->
 
 <footer>
-    <p> Footer. Discord link image. Copyrightstuff. </p>
+    <div id="footer_content">
+        <p> Footer. Discord link image. Copyrightstuff. </p>
+    </div>
 </footer>
 
 </body>
