--- a/COMM232A_WebCommunication/HoughtonEsports/index.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div class="title">
-    <h1> Houghton Esports </h1>
+<div class="heading">
+    <h1 class="heading-text"> Houghton Esports </h1>
 </div>
 
 <nav class="gameBanner">
