Added overwatch game page

--- a/COMM232A_WebCommunication/HoughtonEsports/index.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="heading">
+<div class="heading_home">
     <h1 class="heading-text"> Houghton Esports </h1>
 </div>
 
@@ -25,28 +25,41 @@
 </div>
 
 <div class="content">
-    <h2> What is esports?</h2>
-    <p> Esports is ... </p>
+    <h2> What are esports?</h2>
+    <p> Esports is organized, multiplayer video game competitions particularly
+        between professional or collegiate players. It has gained extreme popularity
+        over the past few years and has attracted the attention of many, mainly
+        with the large prize pools of tournemnts, one of which has approached the
+        size of almost $30 million. It is also becoming very popular as a collegiate
+        sport as well, attracting many students who are often offered scholarships
+        to compete at larger schools.
+    </p>
 
-    <h2> About Esports at Houghton </h2>
-    <p> Espors at Houghton is great... </p>
+    <h2> About esports at Houghton </h2>
+    <p> At Houghton, we compete against different schools in our regions and
+        host multiple tournaments in our world class esports center. Come see
+        what all of the hype is about. We have teams in Overwatch, League of Legends,
+        Dota 2, and Rocket League. Houghton esports athletes are expected to maintain
+        peak grades, have a regular workout regime, along with practicing with their teams
+    </p>
 
     <h2> Interested? Sign up! </h2>
-    <p> You can sign up by ... </p>
+    <p> If you have any questions, would like to schedule your own event at our
+        event center, or would like to sign up, you can contact <a href="mailto:esports@houghton.edu">
+    esports@houghton.edu </a>. You can also join the Houghton esports <a href=""> discord </a>.
+    </p>
 </div>
 
 <div class="sideBar">
 
 </div>
 
-<!-- <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;
-wkst=1&amp;bgcolor=%23FFFFFF&amp;src=houghton.edu_uf7s0s2kr1usepnpo5mook
-40jg%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York"
-style="border-width:0;" width="400" height="400" frameborder="0" scrolling="no"></iframe> -->
-
 <footer>
     <div id="footer_content">
-        <p> Footer. Discord link image. Copyrightstuff. </p>
+        <p> This website does not reflect the actual state of esports at Houghton.
+            <br> This website is the final project for Web Communication course.
+            <br> Site created by Erik Sorensen.
+        </p>
     </div>
 </footer>
 
