Added links, still needs centering for home link

--- a/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
@@ -13,7 +13,7 @@
 
 <nav class="gameBanner">
     <ul>
-        <li><a href="" id="overwatch"><img src="assets/imgs/Overwatch_circle_logo.svg.png" alt="" height=42 width=42>Overwatch</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
         <li><a href="" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
         <li><a href="" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
@@ -48,7 +48,7 @@
             These games are also best of 5, while the finals are a best of 7.
         </p>
     </div>
-    
+
     <div class="grid-item">
         <h2> Player of the Month </h2>
         <p> Our player of the month is Jay "Sinatraa" Won! Sinatraa plays the assault position
