Fixed banner colors and text spacing

--- a/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link href="assets/styles.css" rel="stylesheet" type="text/css">
+<link href="assets/game_page.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
 
 <nav class="gameBanner">
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" id="home"><img src="assets/imgs/home.svg" alt="" height=42 width=42>Home</a></li>
         <li><a href="" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
         <li><a href="" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
         <li><a href="" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
@@ -21,7 +21,7 @@
 </nav>
 
 <div class="content">
-    <div class="grid-item">
+    <div class="grid-item-text">
         <h2> What is Overwatch</h2>
         <p> Overwatch is a team-based multiplayer first-person shooter. Overwatch
             assigns players into two teams of six, with each player selecting from
@@ -38,7 +38,7 @@
         <img src="assets/imgs/overwatch/overwatch2.jpg" alt="Overwatch Tournament" width=100%>
     </div>
 
-    <div class="grid-item">
+    <div class="grid-item-text">
         <h2> Season Format </h2>
         <p> The 12 teams in our league play against each other during the regular season in best of 5 matchups.
             In other words, the first team to win 3 maps is the victor. Teams will
@@ -49,14 +49,14 @@
         </p>
     </div>
 
-    <div class="grid-item">
+    <div class="grid-item-text">
         <h2> Player of the Month </h2>
         <p> Our player of the month is Jay "Sinatraa" Won! Sinatraa plays the assault position
             and is unstopable. Lets wish him another successful year! </p>
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/potm.png" alt="Overwatch Player of the Month">
+        <img src="assets/imgs/overwatch/potm.png" alt="Overwatch Player of the Month" width=90%>
     </div>
 </div>
 
