changed overwatch potm pic, removed top margins for content

--- a/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/potm.png" alt="Overwatch Player of the Month" width=90%>
+        <img src="assets/imgs/overwatch/sinatraa.jpg" alt="Overwatch Player of the Month" width=100%>
     </div>
 </div>
 
