grammar and other small bug fixes

--- a/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
@@ -22,12 +22,16 @@
 
 <div class="content">
     <div class="grid-item-text">
-        <h2> What is Overwatch</h2>
+        <!-- <div class="grid-item-title"> -->
+            <h2> What is Overwatch?</h2>
+        <!-- </div> -->
+        <!-- <div class="grid-item-text"> -->
         <p> Overwatch is a team-based multiplayer first-person shooter. Overwatch
             assigns players into two teams of six, with each player selecting from
             a roster of 30 characters, known as "heroes", each with a unique style
             of play whose roles are divided into three general categories that fit their role. Players on a team work together to secure and defend control points on a map or escort a payload across the map in a limited amount of time.
         </p>
+        <!-- </div> -->
     </div>
 
     <div class="grid-item">
