--- a/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/Overwatch_page.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
 
 <link href="assets/game_page.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>Overwatch at Houghton</title>
 
 </head>
 <body>
@@ -14,9 +16,9 @@
 <nav class="gameBanner">
     <ul>
         <li><a href="index.html" id="home"><img src="assets/imgs/home.svg" alt="" height=42 width=42>Home</a></li>
-        <li><a href="" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
-        <li><a href="" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
-        <li><a href="" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
+        <li><a href="LoL_page.html" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
+        <li><a href="dota2_page.html" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
+        <li><a href="RocketLeague_page.html" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
     </ul>
 </nav>
 
@@ -29,17 +31,20 @@
         <p> Overwatch is a team-based multiplayer first-person shooter. Overwatch
             assigns players into two teams of six, with each player selecting from
             a roster of 30 characters, known as "heroes", each with a unique style
-            of play whose roles are divided into three general categories that fit their role. Players on a team work together to secure and defend control points on a map or escort a payload across the map in a limited amount of time.
+            of play whose roles are divided into three general categories that fit their role. These categories
+            are Assault, Defence, and Support.
+            Players on a team work together to secure and defend control points on a map or escort
+            a payload across the map in a limited amount of time.
         </p>
         <!-- </div> -->
     </div>
 
     <div class="grid-item">
-    <img src="assets/imgs/overwatch/overwatch1.jpg" alt="Overwatch Logo" width=100%>
+    <img src="assets/imgs/overwatch/overwatch1.jpg" alt="Overwatch Logo">
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/overwatch2.jpg" alt="Overwatch Tournament" width=100%>
+        <img src="assets/imgs/overwatch/overwatch2.jpg" alt="Overwatch Tournament">
     </div>
 
     <div class="grid-item-text">
@@ -48,19 +53,19 @@
             In other words, the first team to win 3 maps is the victor. Teams will
             play against each other and at the end of the season, the top 4 teams with
             the best record will go on to play in the playoffs, which will be a double
-            elimination bracket hosted over a week at the victor schools stadium.
+            elimination bracket hosted over one week at the victor school's stadium.
             These games are also best of 5, while the finals are a best of 7.
         </p>
     </div>
 
     <div class="grid-item-text">
         <h2> Player of the Month </h2>
-        <p> Our player of the month is Jay "Sinatraa" Won! Sinatraa plays the assault position
-            and is unstopable. Lets wish him another successful year! </p>
+        <p> Our player of the month is Jay "Sinatraa" Won! Sinatraa is from the USA and plays the assault position
+            and is unstoppable. Lets wish him another successful year! </p>
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/sinatraa.jpg" alt="Overwatch Player of the Month" width=100%>
+        <img src="assets/imgs/overwatch/sinatraa.jpg" alt="Overwatch Player of the Month">
     </div>
 </div>
 
@@ -71,7 +76,10 @@ style="border-width:0;" width="400" height="400" frameborder="0" scrolling="no">
 
 <footer>
     <div id="footer_content">
-        <p> Footer. Discord link image. Copyrightstuff. </p>
+        <p> This website does not reflect the actual state of esports at Houghton.
+            <br> This website is the final project for Web Communication course.
+            <br> All pictures are owned by their respective organizations.
+            <br> Site created by Erik Sorensen.
     </div>
 </footer>
 
