--- a/COMM232A_WebCommunication/HoughtonEsports/RocketLeague_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/RocketLeague_page.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
 
 <link href="assets/game_page.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>Rocket League at Houghton</title>
 
 </head>
 <body>
 
-<div class="heading_ow">
+<div class="heading_rl">
     <!-- <h1 class="heading-text"> Game </h1> -->
 </div>
 
 <nav class="gameBanner">
     <ul>
         <li><a href="index.html" id="home"><img src="assets/imgs/home.svg" alt="" height=42 width=42>Home</a></li>
-        <li><a href="" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
-        <li><a href="" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
-        <li><a href="" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
+        <li><a href="Overwatch_page.html" id="overwatch"><img src="assets/imgs/Overwatch_circle_logo.svg.png" alt="" height=42 width=42>Overwatch</a></li>
+        <li><a href="LoL_page.html" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
+        <li><a href="dota2_page.html" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
     </ul>
 </nav>
 
 <div class="content">
     <div class="grid-item-text">
         <!-- <div class="grid-item-title"> -->
-            <h2> What is Overwatch?</h2>
+            <h2> What is Rocket League?</h2>
         <!-- </div> -->
         <!-- <div class="grid-item-text"> -->
         <p>
             Rocket League is best described as soccer with cars. Rocket League
-            is most commonly played in teams of 3, where each player drives a car,
+            is most commonly played in teams of 3, where each player drives a virtual car,
             and the goal of the game is to score the ball into the opponents goal
-            while defending your own goal, in order to score the most goals. These
+            while defending your own. The team who scores the most goals before the game ends wins. These
             cars however are somewhat special, as they can jump, roll, and sometimes
             even fly in the air. It is an extremely fast paced game that requires
             quick reflexes and even quicker decision making.
@@ -39,11 +41,11 @@
     </div>
 
     <div class="grid-item">
-    <img src="assets/imgs/overwatch/overwatch1.jpg" alt="Overwatch Logo" width=100%>
+    <img src="assets/imgs/RocketLeague/RL_1.jpg" alt="Rocket League court">
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/overwatch2.jpg" alt="Overwatch Tournament" width=100%>
+        <img src="assets/imgs/RocketLeague/RL_2.jpg" alt="Rocket League Tournament">
     </div>
 
     <div class="grid-item-text">
@@ -53,7 +55,7 @@
             5 matchups. In other words, the first team to win 3 matches is the victor. Teams will
             play against each other and at the end of the season, the top 4 teams with
             the best record will go on to play in the playoffs, which will be a double
-            elimination bracket hosted over a week at the victor schools stadium.
+            elimination bracket hosted over one week at the victor schools stadium.
             These games are also best of 5, while the finals are a best of 7.
         </p>
     </div>
@@ -61,13 +63,14 @@
     <div class="grid-item-text">
         <h2> Player of the Month </h2>
         <p>
-            Our player of the month is Jay "Sinatraa" Won! Sinatraa plays the assault position
-            and is unstopable. Lets wish him another successful year!
+            Our player of the month is Courant "Kaydop" Alexandre! Kaydop is a player from France and plays for team
+            Vitality. He is known for his flawless mechanics in the game that are matched by none other.
+            Congrats for Kaydop for his hard work and earning Player of the Month!.
         </p>
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/sinatraa.jpg" alt="Overwatch Player of the Month" width=100%>
+        <img src="assets/imgs/RocketLeague/RL_potm.jpg" alt="Rocket League Player of the Month">
     </div>
 </div>
 
@@ -78,7 +81,10 @@ style="border-width:0;" width="400" height="400" frameborder="0" scrolling="no">
 
 <footer>
     <div id="footer_content">
-        <p> Footer. Discord link image. Copyrightstuff. </p>
+        <p> This website does not reflect the actual state of esports at Houghton.
+            <br> This website is the final project for Web Communication course.
+            <br> All pictures are owned by their respective organizations.
+            <br> Site created by Erik Sorensen.
     </div>
 </footer>
 
