--- a/COMM232A_WebCommunication/HoughtonEsports/index.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
 
 <link href="assets/styles.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>Houghton Esports</title>
 
 </head>
 <body>
@@ -14,9 +16,9 @@
 <nav class="gameBanner">
     <ul>
         <li><a href="Overwatch_page.html" id="overwatch"><img src="assets/imgs/Overwatch_circle_logo.svg.png" alt="" height=42 width=42>Overwatch</a></li>
-        <li><a href="" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
-        <li><a href="" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
-        <li><a href="" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
+        <li><a href="LoL_page.html" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
+        <li><a href="dota2_page.html" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
+        <li><a href="RocketLeague_page.html" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
     </ul>
 </nav>
 
@@ -26,7 +28,7 @@
 
 <div class="content">
     <h2> What are esports?</h2>
-    <p> Esports is organized, multiplayer video game competitions particularly
+    <p> Esports are organized, multiplayer video game competitions particularly
         between professional or collegiate players. It has gained extreme popularity
         over the past few years and has attracted the attention of many, mainly
         with the large prize pools of tournemnts, one of which has approached the
@@ -46,7 +48,7 @@
     <h2> Interested? Sign up! </h2>
     <p> If you have any questions, would like to schedule your own event at our
         event center, or would like to sign up, you can contact <a href="mailto:esports@houghton.edu">
-    esports@houghton.edu </a>. You can also join the Houghton esports <a href=""> discord </a>.
+    esports@houghton.edu </a>. You can also join the Houghton esports <a href="https://discordapp.com/"> Discord </a>.
     </p>
 </div>
 
