--- a/COMM232A_WebCommunication/HoughtonEsports/LoL_page.html
+++ b/COMM232A_WebCommunication/HoughtonEsports/LoL_page.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <head>
 
 <link href="assets/game_page.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>League of Legends at Houghton</title>
 
 </head>
 <body>
 
-<div class="heading_ow">
+<div class="heading_lol">
     <!-- <h1 class="heading-text"> Game </h1> -->
 </div>
 
 <nav class="gameBanner">
     <ul>
         <li><a href="index.html" id="home"><img src="assets/imgs/home.svg" alt="" height=42 width=42>Home</a></li>
-        <li><a href="" id="lol"><img src="assets/imgs/league-of-legends.png" alt="" height=42 width=42>League of Legends</a></li>
-        <li><a href="" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
-        <li><a href="" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
+        <li><a href="Overwatch_page.html" id="overwatch"><img src="assets/imgs/Overwatch_circle_logo.svg.png" alt="" height=42 width=42>Overwatch</a></li>
+        <li><a href="dota2_page.html" id="dota"><img src="assets/imgs/dota_logo.png" alt="" height=42 width=42>Dota 2</a></li>
+        <li><a href="RocketLeague_page.html" id="rl"><img src="assets/imgs/Rocketleague-logo.png" alt="" height=42 width=42>Rocket League</a></li>
     </ul>
 </nav>
 
@@ -28,7 +30,7 @@
         <!-- <div class="grid-item-text"> -->
         <p>
             League of Legends is a 5 v 5 MOBA, or Multiplayer Online Battle Arena. The goal of the game
-            is to destroy the other the other teams 'Nexus', which is guarded by towers and
+            is to destroy the other the other team's 'Nexus', which is guarded by towers and
             the enemy team. To achieve this objective, players choose from over 100 different champions,
             each with their own unique abilities. Players use these champions to then work together to
             destroy the enemy's 'Nexus'.
@@ -37,31 +39,33 @@
     </div>
 
     <div class="grid-item">
-    <img src="assets/imgs/overwatch/overwatch1.jpg" alt="Overwatch Logo" width=100%>
+    <img src="assets/imgs/LoL/lol_1.jpg" alt="League of Legends Nexus">
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/overwatch2.jpg" alt="Overwatch Tournament" width=100%>
+        <img src="assets/imgs/LoL/lol_2.jpg" alt="League of Legends Tournament">
     </div>
 
     <div class="grid-item-text">
         <h2> Season Format </h2>
         <p>
-            The 12 teams in our league play against each other during the regular season in best of 3 matchups.Teams will play against each other and at the end of the season, the top 4 teams with
-            the best record will go on to play in the playoffs, which will be a double
-            elimination bracket hosted over a week at the victor schools stadium.
+            The 12 teams in our league play against each other during the regular season in best of 3 matchups.
+            Teams will play against each other and at the end of the season. The top 4 teams with
+            the best record will go on to play in the playoffs which will be a double
+            elimination bracket hosted over one week at the victor school's stadium.
             These games are also best of 3, while the finals are a best of 5.
         </p>
     </div>
 
     <div class="grid-item-text">
         <h2> Player of the Month </h2>
-        <p> Our player of the month is Jay "Sinatraa" Won! Sinatraa plays the assault position
-            and is unstopable. Lets wish him another successful year! </p>
+        <p> Our player of the month is Lee "Faker" Sang-hyeok! Sinatraa is from South Korea
+            and plays the assault position for team SK Telecom
+            and is unstoppable. Lets wish him another successful year! </p>
     </div>
 
     <div class="grid-item">
-        <img src="assets/imgs/overwatch/sinatraa.jpg" alt="Overwatch Player of the Month" width=100%>
+        <img src="assets/imgs/LoL/lol_potm.jpg" alt="League of Legends Player of the Month">
     </div>
 </div>
 
@@ -72,7 +76,10 @@ style="border-width:0;" width="400" height="400" frameborder="0" scrolling="no">
 
 <footer>
     <div id="footer_content">
-        <p> Footer. Discord link image. Copyrightstuff. </p>
+        <p> This website does not reflect the actual state of esports at Houghton.
+            <br> This website is the final project for Web Communication course.
+            <br> All pictures are owned by their respective organizations.
+            <br> Site created by Erik Sorensen.
     </div>
 </footer>
 
